# Deepcool-Ryzen

./: .gitignore  AMDRyzenMasterMonitoringSampleApp.sln  AMDRyzenMasterMonitoringSampleApp.vcxproj  Resource.rc  RyzenMasterMonitor.sln  RyzenMasterMonitor.vcxproj
.github/workflows/: build.yml
inc/: RustBridge.hpp  Utility.hpp
rmmon_console/: Cargo.toml
rmmon_console/src/: main.rs
rmmon_wrapper/: rmmon_wrapper.cpp  rmmon_wrapper.h
rust/: Cargo.toml  build.rs
rust/src/: ld_device.rs  lib.rs  main.rs
src/: RustBridge.cpp  Utility.cpp  sampleApp.cpp  telemetry.cpp
tm_plugin/: README.md  RyzenTMPlugin.cpp  TMPluginRyzenSDK.vcxproj  TMPluginRyzenSDK.vcxproj.filters
