[package]
name = "ryzenmaster-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Devices_DeviceAndDriverInstallation", "Win32_Devices_HumanInterfaceDevice", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_IO", "Win32_System_Services", "Win32_System_Threading"] }

[build-dependencies]
cc = "1.0"
embed-manifest = "1.4"

